[gd_scene load_steps=5 format=3 uid="uid://dln5k6816jn7g"]

[ext_resource type="Theme" uid="uid://ddwyadkcpe0pc" path="res://theme/button_theme.tres" id="1_1hj5g"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_slfb3"]

[sub_resource type="InputEventAction" id="InputEventAction_5imnt"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_igeil"]
events = [SubResource("InputEventAction_5imnt")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_slfb3")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_1hj5g")
shortcut = SubResource("Shortcut_igeil")
text = "RESUME"

[node name="retry_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_1hj5g")
text = "RETRY
"

[node name="quit_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_1hj5g")
text = "QUIT
"

[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_holder/retry_btn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_quit_btn_pressed"]
